force-app/main/default/objects/customer_subscription__c/customer_subscription__c.object-meta.xml
<CustomObject>
    <label>customer subscription</label>
    <nameField>
        <displayFormat>CS-{000}</displayFormat>
        <label>customer subscription id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>customer subscriptoins</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>