force-app/main/default/objects/customer_subscription__c/fields/customer__c.field-meta.xml
<CustomField>
    <fullName>customer__c</fullName>
    <label>customer</label>
    <referenceTo>customer2__c</referenceTo>
    <relationshipLabel>customer subscriptoins</relationshipLabel>
    <relationshipName>customer_subscriptoins</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>