force-app/main/default/objects/customer_subscription__c/fields/end_date__c.field-meta.xml
<CustomField>
    <fullName>end_date__c</fullName>
    <label>end date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>