force-app/main/default/objects/customer_subscription__c/fields/previous_subscription__c.field-meta.xml
<CustomField>
    <fullName>previous_subscription__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>previous subscription</label>
    <referenceTo>customer_subscription__c</referenceTo>
    <relationshipLabel>customer subscriptoins</relationshipLabel>
    <relationshipName>customer_subscriptoins</relationshipName>
    <type>Lookup</type>
</CustomField>