force-app/main/default/objects/customer_subscription__c/fields/subscription_cycle__c.field-meta.xml
<CustomField>
    <fullName>subscription_cycle__c</fullName>
    <label>subscription cycle</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>monthly</fullName>
            </value>
            <value>
                <fullName>yearly</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>