force-app/main/default/objects/customer_subscription__c/fields/subscription_plan__c.field-meta.xml
<CustomField>
    <fullName>subscription_plan__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>subscription plan</label>
    <referenceTo>subscription_plan__c</referenceTo>
    <relationshipLabel>customer subscriptoins</relationshipLabel>
    <relationshipName>customer_subscriptoins</relationshipName>
    <type>Lookup</type>
</CustomField>