force-app/main/default/objects/customer_subscription__c/fields/subscription_status__c.field-meta.xml
<CustomField>
    <fullName>subscription_status__c</fullName>
    <label>subscription status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>pending</fullName>
            </value>
            <value>
                <fullName>active</fullName>
            </value>
            <value>
                <fullName>inactive</fullName>
                <default>true</default>
                <label>inactive</label>
            </value>
            <value>
                <fullName>renewed</fullName>
            </value>
            <value>
                <fullName>inapproval</fullName>
            </value>
            <value>
                <fullName>expired</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>